# MultiplayerPhotoshop

./: .gitignore  ClassesSpec.md  README.md  build.ps1  build.sh  package-lock.json  start.ps1  start.sh
Back_end_authority/: .env.example  API_key_gen.py  ENDPOINTS.txt  Info.md  app.db  database.py  main.py  mock_session_server.py  pyproject.toml  sessions.db
Back_end_authority/static/: index.html  script.js
Back_end_database/: .env.example  Info.md  README.md  pyproject.toml
Back_end_database/app/: main.py
Back_end_database/app/api/: routes.py
Back_end_database/app/core/: config.py  db.py  images.py  security.py
Back_end_database/app/models/: __init__.py  game.py  image.py  session.py  theme.py  user.py
Back_end_database/app/schemas/: game.py  image.py  session.py  theme.py  user.py
Back_end_database/data/: app.db  data.txt
Back_end_database/docs/: info.md
Back_end_session/: Cargo.toml  Info.md
Back_end_session/src/: main.rs
Back_end_session/src/class/: mod.rs  objects.rs  util.rs
Back_end_session/src/data/: redis.rs
Back_end_session/src/managers/: api.rs  broadcast.rs  messages.rs  mod.rs  mousepointers.rs  shutdown.rs  voting.rs
Front_end/Canvas/: BUILD.md  DESCRIPTION.md  Info.md  Makefile  Object_info.md  app.js  app.ts  communication.ts  emscripten.d.ts  game_loop.ts  index.html  input_handling.ts  objects.ts  player_state.ts  renderer.ts  shaders.ts  test.c  test.cpp  tsconfig.json  types.ts  websocketConnection.tsx
Front_end/In_game/: Info.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
Front_end/In_game/src/: App.css  App.tsx  BottomBar.tsx  Canvas.css  Canvas.tsx  Containers.css  Effects.tsx  Layers.css  Leftbar.tsx  Login.tsx  LoseScreen.tsx  RightBar.tsx  Rightbar.tsx  RoleReveal.tsx  (+3 more)
Front_end/Pre_game/: package-lock.json  package.json
(+28 files in other folders)
