[project]
name = "back-end-authority"
version = "0.2.0"
description = "Authority API for Multiplayer Photoshop"
readme = "README_AUTHORITY.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.30.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "markdown>=3.6",
    "sendgrid>=6.12.5",
    "argon2-cffi>=25.1.0",
]
